termine el footer, falta burguer menu al comprar algo

--- a/styles.css
+++ b/styles.css
@@ -330,3 +330,11 @@ li {
 .ul-footer {
   width: 20%;
 }
+
+.iconos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    min-height: 40px;
+}
