--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 p {
@@ -84,12 +83,12 @@ li {
   padding: 15px;
   background-color: rgb(255 209 60 / 61%);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .section0 .BotonNav {
-  width: 100%;
+  padding: 10px;
   margin: 0 4px 0 4px;
   border-color: transparent;
   background-color: transparent;
@@ -112,15 +111,16 @@ li {
 }
 
 .divNAV {
+  position: relative;
   width: 41%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 10px;
 }
 
 .nav-toggle {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   justify-content: center;
   padding: 10px;
@@ -135,17 +135,18 @@ li {
   width: max-content;
   display: flex;
   flex-direction: column;
-  top: 110px;
+  top: 125px;
   right: 23px;
   display: none;
 }
 
 .ulBuy-visible {
+  display: flex;
   position: absolute;
   width: max-content;
   display: flex;
   flex-direction: column;
-  top: 110px;
+  top: 100%;
   right: 23px;
 }
 
