--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ li {
 }
 
 .main {
-  background-image: url(../Pedimon/img/pokemonBG.jfif);
+  background-image: url(./img/pokemonBG.jfif);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
